--- a/css/main.css
+++ b/css/main.css
@@ -32,8 +32,16 @@ h2, h3, p {
 
 #head h2, h3 {
   font-family: futura-pt, sans-serif;
-  font-size: 30px;
+  font-size: 35px;
   font-weight: 600;
+}
+
+/* Header Logo */
+
+.logoDesign {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
 }
 
 
@@ -49,6 +57,10 @@ h2, h3, p {
 
 .mainNavi a {
   text-decoration: none;
+}
+
+.mainNavi h3 {
+  padding-top: 30px;
 }
 
 .logoPadding {
@@ -67,11 +79,13 @@ h2, h3, p {
   width: 40px;
   height: 40px;
   margin-right: 22px;
+  padding-top: 30px;
 }
 
 .socialImg2 {
   width: 40px;
   height: 40px;
+  padding-top: 30px;
 }
 
 /* img */
@@ -80,9 +94,13 @@ h2, h3, p {
   background-color: lightgray;
 }
 
+/* body contents */
 
+#contents {
+  padding-left: 200px;
+  padding-right: 200px;
+}
 
-/* Main Page */
 #contents h2 {
   font-family: "trebuc_bold";
   font-size: 32px;
@@ -92,6 +110,15 @@ h2, h3, p {
   font-family: "trebuc";
   font-size: 22px;
 }
+
+#contents p {
+  font-family: "trebuc";
+  font-size: 15px;
+}
+
+
+
+/* Main Page */
 
 /* Section 1*/
 #teamIntro {
@@ -151,6 +178,30 @@ h2, h3, p {
 }
 
 /* About Page */
+
+#introTeam {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+
+#introTeam h2 {
+  text-align: center;
+}
+
+.membersIntro {
+  margin-bottom: 50px;
+}
+
+.membersIntro img {
+  display: inline-block;
+  width: 150px;
+  height: 150px;
+}
+
+.membersIntro h3 {
+  display: inline-block;
+}
+
 
 
 /* About page, media query, tablet */
@@ -216,6 +267,12 @@ h2, h3, p {
   font-weight: 400;
 }
 
+#footLogo {
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+}
+
 .footNav {
   display: flex;
   flex-direction: row;
@@ -226,6 +283,7 @@ h2, h3, p {
   display: flex;
   flex-direction: row;
   margin-left: 50px;
+  padding-top: 20px;
 }
 
 #footAddress img {
@@ -237,5 +295,18 @@ h2, h3, p {
   display: flex;
   flex-direction: row;
   padding-top: 10px;
+}
+
+.footSocialImg {
+  width: 40px;
+  height: 40px;
+  margin-right: 22px;
+  padding-top: 20px;
+}
+
+.footSocialImg2 {
+  width: 40px;
+  height: 40px;
+  padding-top: 20px;
 }
 
