--- a/css/main.css
+++ b/css/main.css
@@ -121,8 +121,8 @@ nav li {
 /* body contents */
 
 #contents {
-  padding-left: 160px;
-  padding-right: 160px;
+  padding-left: 150px;
+  padding-right: 150px;
 }
 
 #contents h2 {
@@ -487,7 +487,7 @@ button:active, .active {
   line-height: 25px;
 }
 
-.deco h4 {
+.deco {
   font-family: "trebuc";
   font-size: 20px;
   color: #B163EC
@@ -672,6 +672,7 @@ button:active, .active {
 .work:nth-child(1) {
   width: 500px;
   margin-right: 25px;
+  margin-left: 80px;
   flex-grow: 0;
 }
 
@@ -694,7 +695,14 @@ button:active, .active {
   height: 500px;
 }
 
+.work:nth-child(3) img {
+  width: 100%;
+  height: 500px;
+  margin-left: 0;
+}
+
 .work:nth-child(4) {
+  margin-left: 120px;
   margin-right: 1.25em;
   min-height: 400px;
   flex-grow: 0;
@@ -702,7 +710,7 @@ button:active, .active {
 
 .work:nth-child(4) video{
   margin-right: 1.25em;
-  width: 650px;
+  width: 600px;
 }
 
 
@@ -743,6 +751,23 @@ button:active, .active {
     width: 90%;
   }
 
+  .featureText {
+    margin-top: 50px;
+    margin-right: 20px;
+  }
+  
+  .featureText h2 {
+    font-family: "trebuc_bold";
+    font-size: 25px;
+    margin-bottom: 20px;
+  }
+  
+  .featureText p {
+    font-family: "trebuc";
+    font-size: 15px;
+    line-height: 20px;
+  }
+
 }
 
 @media screen and (max-width: 1025px) {
@@ -775,13 +800,13 @@ button:active, .active {
 }
 
 .featureText {
-  margin-top: 200px;
+  margin-top: 100px;
   margin-right: 30px;
 }
 
 .featureText h2 {
   font-family: "trebuc_bold";
-  font-size: 32px;
+  font-size: 30px;
   margin-bottom: 25px;
 }
 
